new homework added